<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>es.cesguiro</groupId>
        <artifactId>daw1-bookstore</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>test-suite</artifactId>
    <packaging>jar</packaging>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <com.h2database.version>2.3.232</com.h2database.version>
        <org.apache.commons.csv.version>1.13.0</org.apache.commons.csv.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>es.cesguiro</groupId>
            <artifactId>util</artifactId>
        </dependency>
        <dependency>
            <groupId>es.cesguiro</groupId>
            <artifactId>domain</artifactId>
        </dependency>
        <dependency>
            <groupId>es.cesguiro</groupId>
            <artifactId>persistence</artifactId>
        </dependency>
        <dependency>
            <groupId>es.cesguiro</groupId>
            <artifactId>application</artifactId>
        </dependency>
        <dependency>
            <groupId>es.cesguiro</groupId>
            <artifactId>web</artifactId>
        </dependency>
        <!--<dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${org.junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${org.mockito.version}</version>
            <scope>test</scope>
        </dependency>-->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${com.h2database.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>${org.flywaydb.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${org.apache.commons.csv.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Plugin Surefire para ejecutar pruebas con JUnit 5 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${org.apache.maven.plugins.version}</version>
            </plugin>
        </plugins>
    </build>

</project>